[package]
name = "google_ngram_defucker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
postcard = { version = "1.0.4", features = ["alloc"] }
rayon = "1.7.0"
reqwest = { version = "0.11.18", features = ["gzip", "blocking"] }
serde = { version = "1.0.171", features = ["derive"] }
walkdir = "2.3.3"
