[package]
name = "google_ngram_defucker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
clap = { version = "4.5.1", features = ["derive"] }
compact_str = { version = "0.7.1", features = ["serde"] }
criterion = "0.5.1"
flate2 = "1.0.28"
hashbrown = { version = "0.14.3", features = ["rayon"] }
itertools = "0.12.1"
memmap2 = "0.9.4"
postcard = { version = "1.0.4", features = ["alloc"] }
rayon = "1.7.0"
serde = { version = "1.0.171", features = ["derive"] }
walkdir = "2.3.3"
